# weatherCN

./: .gitignore  README.md  main.py  paint.py  parser.py  picfinder.py  pyproject.toml  reporter.py
src/weathercn/: main.py  paint.py  parser.py  reporter.py  utils.py
tests/: test_font.py
weatherCN/: main.py  paint.py  parser.py
weathercn/: __main__.py  citycode.py  font.py  main.py  paint.py  picfinder.py  reporter.py  utils.py
