[tool.poetry]
name = "getweather"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
css-parser = "^1.0"
lxml = "^4.3"
pillow = "^6.0"
regex = "^2019.4"
arrow = "^0.13.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
