[project]
name = "py-weathercn"
version = "0.2.0"
description = "Add your description here"
authors = [
    { name = "ssfdust", email = "ssfdust@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "css-parser>=1.0.10",
    "pillow>=10.1.0",
    "regex>=2023.12.25",
    "arrow>=1.3.0",
    "fclist-cffi>=1.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.hatch.build.targets.wheel]
packages = ["src/weathercn"]

[project.scripts]
weathercn = "weathercn.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
